<resources>
    <string name="app_name">CalendarApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="list_name">list name</string>
    <string name="name_of_list">Name of List</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="home_page">Home</string>
    <string name="remove_completed_tasks">Remove Completed Tasks</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

</resources>
